2001-10-16  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/setjmp.c: Also define setjmp and _setjmp if
	BSD_SETJMP or BSD__SETJMP is defined, resp.
	* sysdeps/m68k/bsd-setjmp.c: Inline setjmp code instead of making
	a tail call to __sigsetjmp that would require extending the
	caller's frame.
	* sysdeps/m68k/bsd-_setjmp.c: Likewise.
	* sysdeps/m68k/bsd-setjmp.S: Deleted.
	* sysdeps/m68k/bsd-_setjmp.S: Deleted.
	Reported by Jes Sorensen <jes@trained-monkey.org>.

2001-10-16  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/ldbl-96/s_nextafterl.c (__nextafterl): Fix
	parentheses.
	Reported by David Byron <dbyron@porto.coactive.com>, close PR libc/2589.

2001-10-15  Ulrich Drepper  <drepper@redhat.com>

	* po/ca.po: New file.  Contributed by the translation team.

2001-10-15  Ralf Baechle  <ralf@gnu.org>

	* sysdeps/unix/sysv/linux/mips/sys/sysmips.h: Make sysmips() prototype
	a varargs prototype.  Remove dependency from kernel header files.

	* sysdeps/unix/sysv/linux/mips/bits/termios.h: General cleanup, use
	__USE_MISC / __USE_XOPEN not __USE_BSD where appropriate.

2001-10-14  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (handle_ellipsis): Use %lX not %lx
	to generate hexadecimal identifier.
	Patch by Jungshik Shin <jungshik.shin@yale.edu>.

2001-10-09  Stephen L Moshier  <moshier@mediaone.net>

	* sysdeps/ieee754/ldbl-96/s_cbrtl.c (__cbrtl): Fix algorithm.

2001-10-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/ldbl-128/e_powl.c: New file.
	* sysdeps/ieee754/ldbl-128/s_cbrtl.c: New file.
	Contributed by Stephen L Moshier <moshier@mediaone.net>.

	* sysdeps/ieee754/ldbl-128/e_j0l.c: Constify float variables.
	* sysdeps/ieee754/ldbl-128/e_j1l.c: Likewise.
	* sysdeps/ieee754/ldbl-128/e_lgammal_r.c: Likewise
	* sysdeps/ieee754/ldbl-128/s_erfl.c: Likewise
	* sysdeps/ieee754/ldbl-128/s_expm1l.c: Likewise
	* sysdeps/ieee754/ldbl-128/s_log1pl.c: Likewise

	* timezone/africa: Update from tzdata2001d.
	* timezone/asia: Likewise.