@@ -1,5 +1,8 @@
 2001-10-16  Andreas Schwab  <schwab@suse.de>
 
+	* sysdeps/m68k/fpu/libm-test-ulps: Updated for fixed cbrtl
+	implementation.
+
 	* sysdeps/m68k/setjmp.c: Also define setjmp and _setjmp if
 	BSD_SETJMP or BSD__SETJMP is defined, resp.
 	* sysdeps/m68k/bsd-setjmp.c: Inline setjmp code instead of making
